[package]
name = "mikan_kernel"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
