[package]
name = "mikan_kernel"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
heapless = "0.7.4"
unicode-segmentation = "1.8.0"
spin = "0.5.2"
x86 = "0.41.0"
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
